auth icin login ve register alani tamamlandi
