# app/Http/Controllers/Controller.php
@@ -12,13 +12,21 @@ use Illuminate\Routing\Controller as BaseController;
  *      version="1.0.0",
  *      title="Webudi RESTful API Documentation",
  *      description="L5 Swagger OpenApi description",
- *      @OA\Contact(
- *          email="urgun.js@gmail.com"
- *      ),
  *     @OA\License(
  *         name="Apache 2.0",
  *         url="https://www.apache.org/licenses/LICENSE-2.0.html"
  *     )
+ * )
+ * @OA\Components(
+ *     @OA\SecurityScheme(
+ *         securityScheme="bearerAuth",
+ *         type="http",
+ *         scheme="bearer",
+ *     ),
+ *     @OA\Attachable
+ * )
+ * @OA\Server(
+ *     url=L5_SWAGGER_CONST_HOST
  * )
  */
 class Controller extends BaseController
