# app/Http/Requests/UserRequest.php
@@ -62,6 +62,9 @@ class UserRequest extends FormRequest
             'password.string' => 'Şifre alanı metinsel olmalıdır!',
             'password.min' => 'Şifre en az 8 karakter olmalıdır!',
             'password.confirmed' => 'Şifre ile şifre tekrar alanı eşleşmiyor!',
+            'password_confirmation.required' => 'Şifre tekrar alanı zorunludur!',
+            'password_confirmation.string' => 'Şifre tekrar alanı metinsel olmalıdır!',
+            'password_confirmation.min' => 'Şifre tekrar en az 8 karakter olmalıdır!',
             'phone.required' => 'Telefon alanı zorunludur!',
             'phone.string' => 'Telefon alanı metinsel olmalıdır!',
             'phone.regex' => 'Bu telefon geçerli bir telefon numarası değil, lütfen +90 (555) 555 55 55 formatında giriniz!',
