# app/Http/Resources/UserResource.php
@@ -21,6 +21,7 @@ class UserResource extends JsonResource
             'email' => $this->email,
             'phone' => $this->phone,
             'avatar' => $this->image,
+            //'password' => $this->password,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
         ];
