# routes/api.php
@@ -1,13 +1,20 @@
 <?php
 
-use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\UserController;
-use App\Http\Controllers\Auth\LoginController;
+use App\Http\Controllers\AuthController;
+use Illuminate\Support\Facades\Route;
 
-Route::post('v1/login', [LoginController::class, 'login']);
-Route::group(['prefix' => 'v1', 'middleware' => 'auth:api'], function () {
-    Route::resource('users', UserController::class);
-    Route::delete('users/destroy/bulk', [UserController::class, 'destroyBulk'])->name('users.destroy.bulk');
-    Route::post('users/{id}/avatar', [UserController::class, 'avatar'])->name('users.avatar');
+Route::group(['prefix' => env('API_VERSION')], function () {
+    Route::group(['controller' => AuthController::class, 'prefix' => 'auth'], function () {
+        Route::post('register', 'register')->name('auth.register');
+        Route::post('refresh', 'refresh')->name('auth.refresh');
+        Route::post('logout', 'logout')->name('auth.logout');
+        Route::post('login', 'login')->name('auth.login');
+        Route::get('me', 'profile')->name('auth.me');
+    });
+    Route::group(['controller' => UserController::class, 'middleware' => 'auth:api'], function () {
+        Route::delete('users/destroy/bulk', 'destroyBulk')->name('users.destroy.bulk');
+        Route::post('users/{id}/avatar', 'avatar')->name('users.avatar');
+        Route::resource('users', UserController::class);
+    });
 });
